feat(module-1.6): add join optimization experiments